--- a/Bluebox/cistdale.html
+++ b/Bluebox/cistdale.html
@@ -12,7 +12,7 @@
     <h1>Více o Blue Box</h1>
     <p>Podrobný pohled na vztahy, motivace a vývoj postav.</p>
   </header>
-
+  <!--lets get this party starteddd-->
   <section class="obsah">
     <h2>Příběh a atmosféra</h2>
     <p>Blue Box kombinuje jemnost školní romantiky s napětím sportovní soutěže. Sledujeme Taikiho, jeho oddanost badmintonu a narůstající city k Chinatsu, která hraje basketbal. Vzniká mezi nimi pouto, které se rozvíjí pod jednou střechou.</p>
